2004-08-20  Erik Sandberg <ersa9195@student.uu.se>

	* scripts/convert-ly.py: typo

2004-08-19  Carl Sorensen  <carldsorensen@comcast.net>

	* scm/fret-diagrams.scm: Eliminate use of fontify-text; make 
	font calls for diagrams based on paper and props

2004-08-19  Graham Percival <gperlist@shaw.ca>

	* scripts/convert-ly.py: add \newpage -> \pageBreak rule.

2004-08-19  Erik Sandberg <ersa9195@student.uu.se>

	* ly/spanners-init.ly: Correct meanings of setTextDecresc/Dim, added setHairpinDecresc/Dim

2004-08-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/include/lily-guile.hh: Cosmetics.

2004-08-18  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* input/regression/fermata-rest-position.ly: new file

	* ly/property-init.ly (hideNotes): remove \setMmRestFermata

	* scripts/convert-ly.py (conv): add rule for \setMmRestFermata

2004-08-18  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/framework-tex.scm (output-preview-framework) 
	(output-classic-framework): 
	* scm/framework-ps.scm (output-preview-framework):
	s/ly:paper-book-lines/ly:paper-book-systems/g

	* scm/fret-diagrams.scm (ss-font-encoding):
	s/my-font-encoding/ss-font-encoding

2004-08-18  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scm/music-functions.scm (direction-polyphonic-grobs): Set
	direction also on fingerings.

	* lily/clef-engraver.cc: Add forceClef to list of read properties.

2004-08-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* po/nl.po: Some updates.

	* scm/lily.scm (_): New function.
	(postscript->pdf, postscript->png, lilypond-main)
	(postscript->pdf): Use it.  Write messages to stderr.

	* stepmake/stepmake/po-targets.make (ALL_PO_SOURCES): Add SCM_FILES.

	* scm/GNUmakefile (XGETTEXT_FLAGS): Set language to Lisp.
	xgettext does not recognise scheme yet.  Patch submitted.

	* lily/scm-option.cc (LY_DEFINE):
	* lily/main.cc: The program is now called lilypond (WAS: lilypond-bin).

	* lily/rest-collision.cc (do_shift): Uniformise two too many rests
	messages.

	* lily/include/paper-book.hh