@@ -1,3 +1,11 @@
+2004-08-20  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* lily/script-engraver.cc (acknowledge_grob): only take into
+	account note heads with a music cause. Fixes ambitus-accent.ly
+
+	* scm/define-markup-commands.scm (finger): set encoding to
+	fetaNumber.
+
 2004-08-20  Erik Sandberg <ersa9195@student.uu.se>
 
 	* scripts/convert-ly.py: typo
